Correccion de css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Modelo de Cajas</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
-	<div>
-		<div class="interno">
-			<p>Hola Mundo</p>
+	<head>
+		<meta charset="UTF-8">
+		<title>Modelo de Cajas</title>
+		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
+	<body>
+		<div class="Cajaexterna">
+			<div class="Cajainterna">Hola Mundo</div>
 		</div>
-		
-	</div>
-</body>
+	</body>
 </html>
